--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
     <title>Doge Exercise</title>
+    
 </head>
 <body>
     <button id="doge">Doggo</button>
+
+
+
+    <script src="dom.js"></script>
 </body>
 </html>
